# ComfyUI-Text-Utility

./: LICENSE  README.md  README_ja.md  __init__.py  cond_tag_processor.py  nodes.py  pyproject.toml
.github/workflows/: publish_action.yml
doc/: ConditionalTagProcessor.md  ConditionalTagProcessor_ja.md
js/: StringsFromTextbox.js  parse_prompt_custom.js
